--- a/Styles.css
+++ b/Styles.css
@@ -6,14 +6,24 @@
 body{
     background-color: #132029;
     color: #333;
+    margin: 16px;
 }
 
 .nav-link{
     color: #333;
 }
+/* 
+.image{
+    border: 2px solid rgb(226, 226, 214);
+} */
+
+.extra,.main,.menu{
+    border: 2px solid rgb(226, 226, 214);
+}
 
 .image img{
     border-radius: 4px;
+    border: 2px solid rgb(226, 226, 214);
 }
 
 .main img{
@@ -58,7 +68,7 @@ haciendo feo, le puse un hover para poder jugar con el jajaja */
 }
 
 .header{grid-area: header; background-color: rgb(226, 226, 214);}
-.menu{grid-area: menu; background-color: #495359;}
+.menu{grid-area: menu; background-color: #305441;}
 .hero{grid-area: hero; background-color: rgb(226, 226, 214);}
 .main{grid-area: main; background-color: #333; color: #f5f5f5;}
 .extra{grid-area: extra; background-color: #FA9127;}
@@ -89,6 +99,14 @@ haciendo feo, le puse un hover para poder jugar con el jajaja */
             "menu extra image image"
             "banner banner banner banner"
         ;
+    }
+
+    .extra:hover{
+        background-color: #24a25f;
+    }
+
+    .image:hover{
+        background-color: #98a6d6;
     }
 }
 @media(max-width:500px){
